# finops-pack

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
cfn/: readhonly-role.yaml
demo/fixtures/: access_report.json  accounts.json  ce_total_spend.json  coh_summaries.json  exports.json  findings.json  native_actions.json  resources.json  savings_ranges.json  schedule_recs.json  summary.json
docs/: exports-json.md  permissions-explained.md
docs/engineering/: architecture.md  job-model.md  report-schema.md
docs/engineering/decisions/: README.md
docs/product/: account-scope.md  intake-flow.md  permissions-explained.md  web-leadgen.md
finops_pack/: __init__.py  __main__.py  cli.py  config.py  demo_fixtures.py  export_schema.py  iam_policy_generator.py  levers.py  models.py
finops_pack/analyzers/: __init__.py  account_classification.py  action_builders.py  action_opportunities.py  commitments.py  ec2_compute.py  ecs_fargate.py  lambda_memory.py  nat_gateways.py  native_ebs.py  pricing.py  rds_optimization.py  rds_schedule.py  s3_storage.py  schedule_recommendations.py
finops_pack/aws/: __init__.py  assume_role.py  ce_recommendations.py  cost_explorer.py  cost_optimization_hub.py
finops_pack/collectors/: __init__.py  cloudwatch.py  ebs.py  ec2.py  ecs.py  lambda_functions.py  nat_gateways.py  organizations.py  rds.py  s3.py
finops_pack/publish/: __init__.py  s3.py
finops_pack/render/: __init__.py  dashboard.py  exporters.py
finops_pack/render/static/: style.css
finops_pack/render/templates/: appendix.html.j2  report.html.j2  report_lead_magnet.html.j2
iam/: policy-full.json  policy-min.json
infra/aws/cloudformation/: readonly-role.yaml
infra/aws/containers/: web.Dockerfile  worker.Dockerfile
infra/aws/examples/: config.example.yaml
infra/aws/iam/: policy-full.json  policy-min.json  private-report-bucket-policy.json
src/finops_pack/: __init__.py  cli.py
src/finops_pack/analysis/: account_classification.py  action_builders.py  action_opportunities.py  commitments.py  ec2_compute.py  ecs_fargate.py  lambda_memory.py  nat_gateways.py  native_ebs.py  rds_optimization.py  rds_schedule.py  (+2 more)
tests/: test_account_classification.py  test_action_coverage.py  test_assume_role.py  test_ce_recommendations.py  test_cli.py  test_config.py  test_cost_explorer.py  test_cost_optimization_hub.py  test_dashboard.py  test_demo_fixtures.py  test_ec2.py  test_export_schema.py  test_iam_policy_generator.py  test_models.py  test_native_ebs.py  test_organizations.py  test_publish.py  test_rds_schedule.py  test_schedule_recommendations.py
tests/analysis/: test_account_classification.py  test_action_coverage.py  test_native_ebs.py  test_rds_schedule.py  test_schedule_recommendations.py
tests/api/: test_web_app.py
tests/domain/: test_account_scope.py  test_models.py
tests/jobs/: test_queue.py  test_state_machine.py
tests/orchestration/: test_config.py  test_demo_fixtures.py
tests/reporting/: test_dashboard.py  test_export_schema.py
tests/use_cases/: test_submit_intake.py
tests/worker/: test_assessment_handler.py  test_web_runner.py
(+89 files in other folders)
