[project]
name = "finops-pack"
version = "0.1.0"
description = "FinOps reporting and scheduling toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
finops-pack = "finops_pack.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
packages = ["finops_pack"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
