[project]
name = "finops-pack"
version = "0.1.0"
description = "AWS Savings Review lead-magnet website and FinOps assessment toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.63",
    "fastapi>=0.116.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "uvicorn>=0.35.0",
]

[project.scripts]
finops-pack = "finops_pack.cli:main"
finops-pack-web = "finops_pack.api.main:main"
finops-pack-worker = "finops_pack.worker.main:main"

[dependency-groups]
dev = [
  "httpx>=0.28",
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finops_pack"]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
ignore_missing_imports = true
python_version = "3.11"
packages = ["finops_pack"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
